@@ -1,3 +1,9 @@
+2013-12-12  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/59440
+	* gfortran.dg/namelist_83.f90: New.
+	* gfortran.dg/namelist_83_2.f90: New.
+
 2013-12-12  Jakub Jelinek  <jakub@redhat.com>
 
 	PR middle-end/59470
